2004-11-16  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-cfg.c (verify_expr): Replace TREE_OPERAND with
	COND_EXPR_COND.
	* tree-if-conv.c (tree_if_convert_cond_expr): Likewise.
	* tree-ssa-dom.c (thread_across_edge): Likewise.
	* tree-vectorizer.c (vect_transform_loop_bound): Replace
	TREE_OPERAND with COND_EXPR_COND, COND_EXPR_THEN, or
	COND_EXPR_ELSE.

2004-11-15  Eric Christopher  <echristo@redhat.com>

	* sched-deps.c (set_sched_group_p): Delete.
	(delete_all_dependencies): New function.
	(fixup_sched_groups): Use. New function.
	(sched_analyze_insn): Use.

2004-11-15  Joseph S. Myers  <joseph@codesourcery.com>

	* c-common.c (binary_op_error): Don't allow LROTATE_EXPR,
	RROTATE_EXPR or unknown code.
	* c-typeck.c (build_binary_op): Don't allow RROTATE_EXPR,
	LROTATE_EXPR, MAX_EXPR, MIN_EXPR, UNORDERED_EXPR, ORDERED_EXPR,
	UNLT_EXPR, UNLE_EXPR, UNGT_EXPR, UNGE_EXPR, UNEQ_EXPR, LTGT_EXPR
	or unknown code.

2004-11-15  Joseph S. Myers  <joseph@codesourcery.com>

	PR c/18498
	* c-decl.c (grokdeclarator): Call check_bitfield_type_and_width
	after processing the declarator.

2004-11-15  Aldy Hernandez  <aldyh@redhat.com>

	* config/rs6000/altivec.md ("altivec_vsplth"): Rewrite with
	vec_duplicate.
	(altivec_vspltb): Same.
	(altivec_vspltw): Same.
	(altivec_vspltisb): Same.
	(altivec_vspltish): Same.
	(altivec_vspltisw): Same.
	(altivec_vspltisw_v4sf): Same.
	(define_constants): Remove UNSPEC_VSPLTISB, UNSPEC_VSPLTISW,
	UNSPEC_VSPLTISH.
	Move "End of vector xor's" comment to the right place.

2004-11-15  Steve Ellcey  <sje@cup.hp.com>

	* config/ia64/ia64.md (*movtf_internal):  Use destination_operand
	instead of nonimmediate_operand.

2004-11-15  Mark Mitchell <mark@codesourcery.com>

	* config/i386/sol2.h (ASM_OUTPUT_CALL): Use print_operand.
	* config/sparc/sol2.h (ASM_OUTPUT_CALL): Likewise.
	* config/sol2.c (solaris_output_init_fini): Update calls to
	ASM_OUTPUT_CALL.  Include "rtl.h".

2004-11-15  Mark Mitchell <mark@codesourcery.com>
